tests for rest-api server